    an 'authorization' header.

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF

AllOverIt.ReactiveUI
  * New package                                                     - TESTS PENDING ******************


02 Jul 2022
Version 5.9.2
======================================================================================================================
AllOverIt.Aws.AppSync.Client
  * Updated the subscription client so an initial connection established at the time of making a subscription will
    connect using the provided authorization, or the default authorization if one isn't provided.


27 Jun 2022
Version 5.9.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Added missing AuthLambdaDirective support to queries and mutations06 Jun 2022
  
  
06 Jun 2022
Version 5.9.0
======================================================================================================================
AllOverIt
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs, as well as the ability to
    enable/disable adding breadcrumbs. StartTimestamp and Enabled are now thread safe if indicated by the options.
    The breadcrumbs can also be configured to initially be enabled or disabled when initially created.
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable

AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection

AllOverIt.Fixture
AllOverIt.Fixture.FakeItEasy
  * Updated to FluentAssertions v6.7.0


01 Jun 2022