@@ -21,10 +21,12 @@
 
     <ItemGroup Condition="'$(TargetFramework)' != 'net6.0' ">
         <PackageReference Include="ReactiveUI" Version="16.4.15" />
+        <PackageReference Include="ReactiveUI.Fody" Version="16.4.15" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' ">
         <PackageReference Include="ReactiveUI" Version="18.2.5" />
+        <PackageReference Include="ReactiveUI.Fody" Version="18.2.5" />
     </ItemGroup>
 
     <ItemGroup>
